# omni

./: .env.example  .env.omni  README.md  pyproject.toml
omni/: omnishell.py  shell.py
omni/commands/: __init__.py  base.py  chain.py  create_archive.py  create_source_type.py  index.py  question.py
omni/utils/: archiveutil.py  fileutil.py  jobutil.py  lakerequestutil.py  sourcetypeutil.py
